[tool.poetry]
name = "billing_service"
version = "0.1.0"
description = "Internship Project"
authors = ["LongNguyen0612 <nhatlong6122@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
marshmallow = "3.2.1"
Flask-Cors = "^3.0.10"
Flask = "^2.1.2"
alembic = "1.0.0"
psycopg2-binary = "2.9.3"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
Werkzeug = "^2.1.2"
logging-context = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
